Backend fixes & client first version
