# server/abl/export/dpAbl.js
@@ -8,7 +8,7 @@ const invoiceDao = require("../../dao/invoice-dao.js");
 
 const openApiSchema = require("../../schema/openapi/schema.json");
 
-const ajv = new Ajv();
+const ajv = new Ajv({ coerceTypes: true, useDefaults: true });
 addFormats(ajv);
 
 const pathItem = openApiSchema.paths["/export/dp"];
@@ -61,7 +61,7 @@ async function ExportDpAbl(req, res) {
       });
     }
 
-    const invoiceList = invoiceDao.list({ taxPayerId, month, year });
+    const { itemList: invoiceList } = invoiceDao.list({ taxPayerId, month, year });
 
     let obrat23 = 0; let dan23 = 0; let pln23 = 0; let odp_tuz23_nar = 0;
 
