# server/app.js
@@ -1,17 +1,21 @@
 const express = require("express");
 const swaggerUi = require("swagger-ui-express");
-
 const swaggerDocument = require("./schema/openapi/schema.json");
+
+const cors = require('cors');
 
 const app = express();
 const port = 8888;
 
 const taxPayerController = require("./controller/taxPayer");
 const invoiceController = require("./controller/invoice");
+const taxPeriodController = require("./controller/taxPeriod");
 const exportController = require("./controller/export");
 
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
+
+app.use(cors());
 
 app.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
@@ -21,6 +25,7 @@ app.get("/", (req, res) => {
 
 app.use("/taxpayers", taxPayerController);
 app.use("/invoices", invoiceController);
+app.use("/taxperiods", taxPeriodController);
 app.use("/export", exportController);
 
 app.listen(port, () => {
