# server/controller/taxPeriod.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const router = express.Router();
+
+const ListAbl = require("../abl/taxPeriod/listAbl");
+
+router.get("/", ListAbl);
+
+module.exports = router;
